--- a/pages/about.html
+++ b/pages/about.html
@@ -239,105 +239,105 @@
             </section>
 
             <!-- ВЫНЕС ОФОРМЛЕНИЕ ОТДЕЛЬНО (БЛОК ШАБЛОННЫЙ) -->
-            <div class="stories main__stories">
-                <div class="my-container stories__container">
-                    <div class="stories__inner">
-                        <div class="swiper stories__swiper">
-                            <div class="swiper-wrapper stories__swiper-wrapper">
-                                <div class="swiper-slide stories__swiper-slide">
-                                    <div class="stories__slide">
-                                        <div class="stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+            <div class="my-stories main__my-stories">
+                <div class="my-container my-stories__container">
+                    <div class="my-stories__inner">
+                        <div class="swiper my-stories__swiper">
+                            <div class="swiper-wrapper my-stories__swiper-wrapper">
+                                <div class="swiper-slide my-stories__swiper-slide">
+                                    <div class="my-stories__slide">
+                                        <div class="my-stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
                                         </div>
-                                        <div class="stories__title">Подпись</div>
+                                        <div class="my-stories__title">Подпись</div>
                                     </div>
                                 </div>
-                                <div class="swiper-slide stories__swiper-slide">
-                                    <div class="stories__slide">
-                                        <div class="stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                <div class="swiper-slide my-stories__swiper-slide">
+                                    <div class="my-stories__slide">
+                                        <div class="my-stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
                                         </div>
-                                        <div class="stories__title">Подпись</div>
+                                        <div class="my-stories__title">Подпись</div>
                                     </div>
                                 </div>
-                                <div class="swiper-slide stories__swiper-slide">
-                                    <div class="stories__slide">
-                                        <div class="stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                <div class="swiper-slide my-stories__swiper-slide">
+                                    <div class="my-stories__slide">
+                                        <div class="my-stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
                                         </div>
-                                        <div class="stories__title">Подпись</div>
+                                        <div class="my-stories__title">Подпись</div>
                                     </div>
                                 </div>
-                                <div class="swiper-slide stories__swiper-slide">
-                                    <div class="stories__slide">
-                                        <div class="stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                <div class="swiper-slide my-stories__swiper-slide">
+                                    <div class="my-stories__slide">
+                                        <div class="my-stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
                                         </div>
-                                        <div class="stories__title">Подпись</div>
+                                        <div class="my-stories__title">Подпись</div>
                                     </div>
                                 </div>
-                                <div class="swiper-slide stories__swiper-slide">
-                                    <div class="stories__slide">
-                                        <div class="stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                <div class="swiper-slide my-stories__swiper-slide">
+                                    <div class="my-stories__slide">
+                                        <div class="my-stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
                                         </div>
-                                        <div class="stories__title">Подпись</div>
+                                        <div class="my-stories__title">Подпись</div>
                                     </div>
                                 </div>
-                                <div class="swiper-slide stories__swiper-slide">
-                                    <div class="stories__slide">
-                                        <div class="stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                <div class="swiper-slide my-stories__swiper-slide">
+                                    <div class="my-stories__slide">
+                                        <div class="my-stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
                                         </div>
-                                        <div class="stories__title">Подпись</div>
+                                        <div class="my-stories__title">Подпись</div>
                                     </div>
                                 </div>
-                                <div class="swiper-slide stories__swiper-slide">
-                                    <div class="stories__slide">
-                                        <div class="stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                <div class="swiper-slide my-stories__swiper-slide">
+                                    <div class="my-stories__slide">
+                                        <div class="my-stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
                                         </div>
-                                        <div class="stories__title">Подпись</div>
+                                        <div class="my-stories__title">Подпись</div>
                                     </div>
                                 </div>
-                                <div class="swiper-slide stories__swiper-slide">
-                                    <div class="stories__slide">
-                                        <div class="stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                <div class="swiper-slide my-stories__swiper-slide">
+                                    <div class="my-stories__slide">
+                                        <div class="my-stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
                                         </div>
-                                        <div class="stories__title">Подпись</div>
+                                        <div class="my-stories__title">Подпись</div>
                                     </div>
                                 </div>
-                                <div class="swiper-slide stories__swiper-slide">
-                                    <div class="stories__slide">
-                                        <div class="stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                <div class="swiper-slide my-stories__swiper-slide">
+                                    <div class="my-stories__slide">
+                                        <div class="my-stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
                                         </div>
-                                        <div class="stories__title">Подпись</div>
+                                        <div class="my-stories__title">Подпись</div>
                                     </div>
                                 </div>
-                                <div class="swiper-slide stories__swiper-slide">
-                                    <div class="stories__slide">
-                                        <div class="stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                <div class="swiper-slide my-stories__swiper-slide">
+                                    <div class="my-stories__slide">
+                                        <div class="my-stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
                                         </div>
-                                        <div class="stories__title">Подпись</div>
+                                        <div class="my-stories__title">Подпись</div>
                                     </div>
                                 </div>
-                                <div class="swiper-slide stories__swiper-slide">
-                                    <div class="stories__slide">
-                                        <div class="stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                <div class="swiper-slide my-stories__swiper-slide">
+                                    <div class="my-stories__slide">
+                                        <div class="my-stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
                                         </div>
-                                        <div class="stories__title">Подпись</div>
+                                        <div class="my-stories__title">Подпись</div>
                                     </div>
                                 </div>
-                                <div class="swiper-slide stories__swiper-slide">
-                                    <div class="stories__slide">
-                                        <div class="stories__slide-img-wrap">
-                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                <div class="swiper-slide my-stories__swiper-slide">
+                                    <div class="my-stories__slide">
+                                        <div class="my-stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="my-stories__slide-img">
                                         </div>
-                                        <div class="stories__title">Подпись</div>
+                                        <div class="my-stories__title">Подпись</div>
                                     </div>
                                 </div>
                             </div>
@@ -349,7 +349,7 @@
             <section class="about-info main__about-info">
                 <div class="my-container about-info__container">
                     <div class="about-info__video-wrap --video-poster">
-                        <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="about-info__video-poster">
+                        <img src="../assets/images/no-photo.png" alt="" class="about-info__video-poster">
                     </div>
                     <div class="about-info__body">
                         <div class="block-title about-info__title">О нас</div>
@@ -629,36 +629,36 @@
                             <div class="swiper-wrapper awards__swiper-wrapper">
                                 <div class="swiper-slide awards__swiper-slide">
                                     <div class="awards__slide">
-                                        <div class="awards__slide-title">оверхед-проекторы</div>
+                                        <div class="awards__slide-title">Лицензия, стр. 1</div>
                                         <div class="awards__slide-wrap-img">
-                                            <img src="../assets/images/pages/main/modern-tools/slide-1.jpg" alt=""
+                                            <img src="../assets/images/pages/about/awards/slide-img-1.png" alt=""
                                                 class="awards__slide-img">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide awards__swiper-slide">
                                     <div class="awards__slide">
-                                        <div class="awards__slide-title">электронные микроскопы</div>
+                                        <div class="awards__slide-title">Лицензия, стр. 2</div>
                                         <div class="awards__slide-wrap-img">
-                                            <img src="../assets/images/pages/main/modern-tools/slide-2.jpg" alt=""
+                                            <img src="../assets/images/pages/about/awards/slide-img-2.png" alt=""
                                                 class="awards__slide-img">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide awards__swiper-slide">
                                     <div class="awards__slide">
-                                        <div class="awards__slide-title">световые столы</div>
+                                        <div class="awards__slide-title">Лицензия, стр. 3</div>
                                         <div class="awards__slide-wrap-img">
-                                            <img src="../assets/images/pages/main/modern-tools/slide-3.jpg" alt=""
+                                            <img src="../assets/images/pages/about/awards/slide-img-3.png" alt=""
                                                 class="awards__slide-img">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide awards__swiper-slide">
                                     <div class="awards__slide">
-                                        <div class="awards__slide-title">ПЕСОЧНИЦЫ ДЛЯ ПОМЕЩЕНИЙ</div>
+                                        <div class="awards__slide-title">Сертификат</div>
                                         <div class="awards__slide-wrap-img">
-                                            <img src="../assets/images/pages/main/modern-tools/slide-4.jpg" alt=""
+                                            <img src="../assets/images/pages/about/awards/slide-img-4.png" alt=""
                                                 class="awards__slide-img">
                                         </div>
                                     </div>
