--- a/pages/development-center.html
+++ b/pages/development-center.html
@@ -319,7 +319,7 @@
                                                 <div class="swiper-slide advantage-item__swiper-slide">
                                                     <div class="advantage-item__slide">
                                                         <div class="advantage-item__slide-img-wrap --video-poster">
-                                                            <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt="" class="advantage-item__slide-img">
+                                                            <img src="../assets/images/pages/development-center/educational-lessons/slide-img-1.jpg" alt="" class="advantage-item__slide-img">
                                                         </div>
                                                         <div class="advantage-item__slide-body">
                                                             <div class="advantage-item__slide-title">Занятия раз в неделю</div>
@@ -330,7 +330,7 @@
                                                 <div class="swiper-slide advantage-item__swiper-slide">
                                                     <div class="advantage-item__slide">
                                                         <div class="advantage-item__slide-img-wrap">
-                                                            <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt="" class="advantage-item__slide-img">
+                                                            <img src="../assets/images/pages/development-center/educational-lessons/slide-img-2.jpg" alt="" class="advantage-item__slide-img">
                                                         </div>
                                                         <div class="advantage-item__slide-body">
                                                             <div class="advantage-item__slide-title">Оплата — раз в месяц</div>
@@ -341,7 +341,7 @@
                                                 <div class="swiper-slide advantage-item__swiper-slide">
                                                     <div class="advantage-item__slide">
                                                         <div class="advantage-item__slide-img-wrap">
-                                                            <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt="" class="advantage-item__slide-img">
+                                                            <img src="../assets/images/pages/development-center/educational-lessons/slide-img-3.jpg" alt="" class="advantage-item__slide-img">
                                                         </div>
                                                         <div class="advantage-item__slide-body">
                                                             <div class="advantage-item__slide-title">Опытные педагоги</div>
@@ -428,7 +428,7 @@
                                                 <div class="swiper-slide advantage-item__swiper-slide">
                                                     <div class="advantage-item__slide">
                                                         <div class="advantage-item__slide-img-wrap --video-poster">
-                                                            <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt="" class="advantage-item__slide-img">
+                                                            <img src="../assets/images/pages/development-center/painting/slide-img-1.jpg" alt="" class="advantage-item__slide-img">
                                                         </div>
                                                         <div class="advantage-item__slide-body">
                                                             <div class="advantage-item__slide-title">Занятия раз в неделю</div>
@@ -439,7 +439,7 @@
                                                 <div class="swiper-slide advantage-item__swiper-slide">
                                                     <div class="advantage-item__slide">
                                                         <div class="advantage-item__slide-img-wrap">
-                                                            <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt="" class="advantage-item__slide-img">
+                                                            <img src="../assets/images/pages/development-center/painting/slide-img-2.jpg" alt="" class="advantage-item__slide-img">
                                                         </div>
                                                         <div class="advantage-item__slide-body">
                                                             <div class="advantage-item__slide-title">Оплата — раз в месяц</div>
@@ -450,22 +450,11 @@
                                                 <div class="swiper-slide advantage-item__swiper-slide">
                                                     <div class="advantage-item__slide">
                                                         <div class="advantage-item__slide-img-wrap">
-                                                            <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt="" class="advantage-item__slide-img">
+                                                            <img src="../assets/images/pages/development-center/painting/slide-img-3.jpg" alt="" class="advantage-item__slide-img">
                                                         </div>
                                                         <div class="advantage-item__slide-body">
                                                             <div class="advantage-item__slide-title">Опытные педагоги</div>
                                                             <div class="advantage-item__slide-text">Занятия ведет педагог с&nbsp;высшей категорией и&nbsp;многолетним опытом работы в&nbsp;худ.&nbsp;школе</div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="swiper-slide advantage-item__swiper-slide">
-                                                    <div class="advantage-item__slide">
-                                                        <div class="advantage-item__slide-img-wrap --video-poster">
-                                                            <img src="../assets/images/pages/main/inspiration/slide-img-5.jpg" alt="" class="advantage-item__slide-img">
-                                                        </div>
-                                                        <div class="advantage-item__slide-body">
-                                                            <div class="advantage-item__slide-title">Занятия раз в неделю</div>
-                                                            <div class="advantage-item__slide-text">Занятия длятся 1&nbsp;час&nbsp;20&nbsp;минут, проходят по&nbsp;субботам</div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -479,7 +468,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="advantage-item center-advantages__advantage-item --no-descButton" data-advantageBlock-id="summerHolidays">
+                        <div class="advantage-item center-advantages__advantage-item --no-descButton" data-advantageBlock-id="summer-holidays">
                             <div class="my-container advantage-item__container">
                                 <div class="advantage-item__desc">
                                     <div class="block-title advantage-item__desc__title">Летние каникулы
@@ -504,40 +493,25 @@
                                                 <div class="swiper-wrapper double-slider__text-swiper-wrapper">
                                                     <div class="swiper-slide double-slider__text-swiper-slide" id="slide1">
                                                         <div class="double-slider__text-slide">
-                                                            <div class="double-slider__slide-title">Сенсорные зоны</div>
+                                                            <div class="double-slider__slide-title">Физическая и творческая деятельность</div>
                                                             <div class="double-slider__slide-text">
-                                                                <p>У маленьких детей процесс познания осуществляется не через
-                                                                    рациональное мышление, а через чувственный опыт и впечатления.
-                                                                    Именно поэтому наши помещения насыщены сенсорными зонами,
-                                                                    способствующими всестороннему развитию ребёнка.</p>
-                                                                <p>Чем более насыщенная и разнообразная сенсорная информация поступает
-                                                                    к ребёнку из окружающей среды, тем легче ему сравнивать,
-                                                                    анализировать и осваивать окружающий мир, тем быстрее развиваются
-                                                                    его когнитивные способности.</p>
+                                                                <p>Вашего ребенка ждет активный отдых, спортивные игры, встречи с интересными людьми</p>
                                                             </div>
                                                         </div>
                                                     </div>
                                                     <div class="swiper-slide double-slider__text-swiper-slide" id="slide2">
                                                         <div class="double-slider__text-slide">
-                                                            <div class="double-slider__slide-title">Множество обучающих предметов и
-                                                                интересных
-                                                                пособий</div>
+                                                            <div class="double-slider__slide-title">Интересное и продуктивное лето</div>
                                                             <div class="double-slider__slide-text">
-                                                                <p>Игра — лучший способ обучения. Игра великолепно мотивирует детей
-                                                                    получать и активно запоминать информацию. Поэтому мы используем
-                                                                    на наших повседневных занятиях, помимо типовых, разнообразные
-                                                                    пособия с яркими иллюстрациями и необычные обучающие предметы.</p>
+                                                                <p>Конкурсы, мастер-классы, квесты, выездные мероприятия</p>
                                                             </div>
                                                         </div>
                                                     </div>
                                                     <div class="swiper-slide double-slider__text-swiper-slide" id="slide3">
                                                         <div class="double-slider__text-slide">
-                                                            <div class="double-slider__slide-title">Все необходимое для творческой
-                                                                деятельности
-                                                            </div>
+                                                            <div class="double-slider__slide-title">4-х разовое питание</div>
                                                             <div class="double-slider__slide-text">
-                                                                <p>Огромное количество природных и бросовых материалов, чтобы пробудить
-                                                                    в ребёнке природную любознательность и познакомить его с миром</p>
+                                                                <p>Сбалансированный, полноценный рацион, учитываем индивидуальную непереносимость продуктов</p>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -590,7 +564,7 @@
                                                         <div class="swiper-slide double-slider__image-swiper-slide">
                                                             <div class="double-slider__image-slide">
                                                                 <div class="double-slider__image-slide-wrap">
-                                                                    <img src="../assets/images/pages/main/dev-environment/slide-img-2.jpg"
+                                                                    <img src="../assets/images/pages/development-center/summer-holidays/slide-img-1.jpg"
                                                                         alt="" class="double-slider__image-slide-photo">
                                                                 </div>
                                                             </div>
@@ -629,7 +603,7 @@
                                                         <div class="swiper-slide double-slider__image-swiper-slide">
                                                             <div class="double-slider__image-slide">
                                                                 <div class="double-slider__image-slide-wrap">
-                                                                    <img src="../assets/images/pages/main/dev-environment/slide-img-3.jpg"
+                                                                    <img src="../assets/images/pages/development-center/summer-holidays/slide-img-2.jpg"
                                                                         alt="" class="double-slider__image-slide-photo">
                                                                 </div>
                                                             </div>
@@ -660,7 +634,7 @@
                                                         <div class="swiper-slide double-slider__image-swiper-slide">
                                                             <div class="double-slider__image-slide">
                                                                 <div class="double-slider__image-slide-wrap">
-                                                                    <img src="../assets/images/pages/main/dev-environment/slide-img-4.jpg"
+                                                                    <img src="../assets/images/pages/development-center/summer-holidays/slide-img-3.jpg"
                                                                         alt="" class="double-slider__image-slide-photo">
                                                                 </div>
                                                             </div>
