--- a/index.html
+++ b/index.html
@@ -237,7 +237,9 @@
                                 </div> <span class="hero-section__location-text"> В Иркутске</span>
                             </div>
                         </div>
-                        <div class="hero-section__wrap-img"></div>
+                        <div class="hero-section__wrap-img">
+                            <img src="./assets/images/pages/main/hero-section/hero-section-img.png" alt="" class="hero-section__img">
+                        </div>
                     </div>
                 </div>
                 <img src="./assets/images/pages/main/background/cones-7.png" alt=""
