--- a/pages/about.html
+++ b/pages/about.html
@@ -232,7 +232,9 @@
                                 </div> <span class="hero-section__location-text"> В Иркутске</span>
                             </div>
                         </div>
-                        <div class="hero-section__wrap-img"></div>
+                        <div class="hero-section__wrap-img">
+                            <img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="hero-section__img">
+                        </div>
                     </div>
                 </div>
                 <img src="../assets/images/pages/main/background/cones-7.png" alt="" class="hero-section__background-img">
@@ -1201,6 +1203,7 @@
     <!-- ОБЩИЕ СКРИПТЫ -->
     <script src="../assets/js/phone-mask.js"></script>
     <script src="../assets/js/open-content.js"></script>
+    <script src="../assets/js/fancybox-init.js"></script>
 
     <script src="../assets/js/header.js"></script>
     <script src="../assets/js/components/stories.js"></script>
@@ -1209,6 +1212,7 @@
     <script src="../assets/js/sections/reviews.js"></script>
 
 
+    
     <!-- СКРИПТЫ СТРАНИЦЫ -->
      <script>
         const awardsSwiper = new Swiper('.awards__swiper', {
