--- a/pages/development-center.html
+++ b/pages/development-center.html
@@ -243,7 +243,9 @@
                                 </div> <span class="hero-section__location-text"> В Иркутске</span>
                             </div>
                         </div>
-                        <div class="hero-section__wrap-img"></div>
+                        <div class="hero-section__wrap-img">
+                            <img src="../assets/images/pages/development-center/hero-section/block-img.jpg" alt="" class="hero-section__img">
+                        </div>
                     </div>
                 </div>
                 <img src="../assets/images/pages/main/background/cones-7.png" alt=""
@@ -1211,12 +1213,14 @@
     <!-- ОБЩИЕ СКРИПТЫ -->
     <script src="../assets/js/phone-mask.js"></script>
     <script src="../assets/js/open-content.js"></script>
+    <script src="../assets/js/fancybox-init.js"></script>
 
     <script src="../assets/js/header.js"></script>
 
     <script src="../assets/js/sections/staff.js"></script>
     <script src="../assets/js/sections/reviews.js"></script>
     
+
 
     <!-- СКРИПТЫ СТРАНИЦЫ -->
     <script>
@@ -1262,7 +1266,6 @@
             }
         });
     </script>
-
 
     <!-- СКРИПТ БЛОКА РАЗВИВАЮЩАЯ СРЕДА (ВЫНЕСТИ ЛОГИКУ double-slider ОТДЕЛЬНО И ОТДЕЛИТЬ ЛОГИКУ ПОСТРОЕНИЯ КОНТЕНТА СЛАЙДЕРОВ ПОД ВЫСОТУ, ДОБАВИТЬ В ЭТОТ СКРИПТ ВЫСОТЫ ПРОСТО НАХОЖДЕНИЕ ОПРЕДЕЛЁННЫХ СЛАЙДЕРОВ ВСЕХ И ПРИМЕНЯТЬ К НИМ ЭТОТ СКРИПТ ВЫСОТЫ) -->
     <script>
