--- a/pages/news.html
+++ b/pages/news.html
@@ -225,7 +225,9 @@
                                 </div> <span class="hero-section__location-text"> В Иркутске</span>
                             </div>
                         </div>
-                        <div class="hero-section__wrap-img"></div>
+                        <div class="hero-section__wrap-img">
+                            <img src="../assets/images/pages/about/hero-section/block-img.jpg" alt="" class="hero-section__img">
+                        </div>
                     </div>
                 </div>
                 <img src="./assets/images/pages/main/background/cones-7.png" alt=""
@@ -560,9 +562,10 @@
     <!-- ОБЩИЕ СКРИПТЫ -->
     <script src="../assets/js/phone-mask.js"></script>
     <script src="../assets/js/header.js"></script>
-    <script src="../assets/js/section-links.js"></script>
+    <script src="../assets/js/fancybox-init.js"></script>
 
 
+    
     <!-- СКРИПТЫ СТРАНИЦЫ -->
     <script>
         const sortButtonsSwiper = new Swiper('.news-list__sort-button-swiper', {
